<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.amit.project.developers">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:background="@drawable/bacj">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@color/newin"
        />

            <ImageView
                android:id="@+id/fb1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/fb_main"/>
            <ImageView
                android:id="@+id/in1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="240dp"
                android:src="@drawable/in_main"
                />
    <ImageView
        android:id="@+id/amit"
        android:paddingTop="10dp"
        android:layout_marginLeft="110dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/fb_myy"/>
    <TextView
        android:id="@+id/amit1"
        android:layout_below="@+id/amit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:textSize="34dp"
        android:gravity="center"
        android:textColor="#000000"
       />
    <TextView
        android:layout_below="@id/amit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="28dp"
        android:gravity="center"
        />


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_below="@+id/card_view1"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@color/newin"

        />

            <ImageView
                android:id="@+id/fb2"
                android:layout_below="@+id/card_view1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/fb_main"/>
            <ImageView
                android:id="@+id/in2"
                android:layout_below="@+id/card_view1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="240dp"
                android:src="@drawable/in_main"
                />
    <ImageView
        android:id="@+id/pulkit"
        android:layout_below="@+id/card_view1"
        android:paddingTop="10dp"
        android:layout_marginLeft="110dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/fb2"/>
    <TextView
        android:id="@+id/pulkit1"
        android:layout_below="@+id/pulkit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name2"
        android:textSize="34dp"
        android:gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_below="@id/pulkit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="28dp"

        android:gravity="center"
        />


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_below="@+id/card_view2"
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@color/newin"
        />

            <ImageView
                android:id="@+id/fb3"
                android:layout_below="@+id/card_view2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/fb_main"/>
            <ImageView
                android:id="@+id/in3"
                android:layout_below="@+id/card_view2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="240dp"
                android:src="@drawable/in_main"
                />
    <ImageView
        android:id="@+id/shubham"
        android:layout_below="@+id/card_view2"
        android:paddingTop="10dp"
        android:layout_marginLeft="110dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/fb3"/>
    <TextView
        android:id="@+id/shubham1"
        android:layout_below="@+id/shubham"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name3"
        android:textSize="34dp"
        android:gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_below="@id/shubham1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="28dp"

        android:gravity="center"
        />


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_below="@+id/card_view3"
        android:id="@+id/card_view4"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@color/newin"
        />

            <ImageView
                android:id="@+id/fb4"
                android:layout_below="@+id/card_view3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/fb_main"/>
            <ImageView
                android:id="@+id/in4"
                android:layout_below="@+id/card_view3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="240dp"
                android:src="@drawable/in_main"
                />
    <ImageView
        android:id="@+id/jagriti"
        android:layout_below="@+id/card_view3"
        android:paddingTop="10dp"
        android:layout_marginLeft="110dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/fb4"/>
    <TextView
        android:id="@+id/jagriti1"
        android:layout_below="@+id/jagriti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name4"
        android:textSize="34dp"
        android:gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_below="@+id/jagriti1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="28dp"
        android:gravity="center"
        />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
