<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.amit.project.credits">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:background="@drawable/bacj">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardBackgroundColor="@color/newin"
                />
            <TextView
                android:id="@+id/amit1"
                android:layout_below="@+id/amit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ty"
                android:textSize="34dp"
                android:gravity="center"
                android:textColor="#000000"
                />
            <TextView
                android:layout_below="@id/amit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ty_text"
                android:gravity="center"
                />


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_below="@+id/card_view1"
                android:layout_marginLeft="25dp"
                android:id="@+id/card_view2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"
                />

            <ImageView
                android:id="@+id/cc"
                android:layout_below="@+id/card_view1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/cc"/>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_marginLeft="180dp"
                android:layout_below="@+id/card_view1"
                android:id="@+id/card_view3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"

                />

            <ImageView
                android:layout_below="@+id/card_view1"
                android:id="@+id/he"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_marginLeft="185dp"
                android:src="@drawable/cf"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_below="@+id/card_view2"
                android:id="@+id/card_view4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="25dp"
                card_view:cardCornerRadius="4dp"

                />

            <ImageView
                android:id="@+id/sj"
                android:layout_below="@+id/card_view3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/sjj"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_below="@+id/card_view2"
                android:id="@+id/card_view5"
                android:layout_marginLeft="180dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"
                />

            <ImageView
                android:id="@+id/tc"
                android:layout_below="@+id/card_view2"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="185dp"
                android:src="@drawable/tc"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_below="@+id/card_view4"
                android:id="@+id/card_view7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardBackgroundColor="@color/newin"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sp"
                android:layout_below="@+id/card_view4"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="#000000"
                />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_below="@+id/card_view7"
                android:id="@+id/card_view6"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"
                />

            <ImageView
                android:id="@+id/tb"
                android:layout_below="@+id/card_view7"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/tb"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tb"
                android:layout_below="@+id/card_view7"
                android:layout_marginLeft="160dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_marginTop="40dp"
                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
